2009-05-27  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: xmartinez

	* flumotion/admin/gtk/componentlist.py:
	Disable starting a component when its worker is not present
	Fixes #564

2009-05-27  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/admin/command/component.py:
	Fix flumotion-command even more, cleaning up after r7224.
	The mood subcommand was looking for the component id in the wrong
	place.

2009-05-27  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Arek

	* doc/redhat/flumotion:
	Fixed clean function to accept arguments.

2009-05-26  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Arek

	* flumotion/service/service.py (Servicer.clean):
	Catch exception thrown when deleting non-existing pid files.

2009-05-26  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py:
	Don't interpolate the message id in the debug string, because if the
	message id is a tuple, it will cause an error. Let the logging
	mechanism handle that

2009-05-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/monitor/nagios/stream.py:
	  Clean up import statements.

2009-05-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/monitor/nagios/stream.py:
	  Use tempfile to choose a temporary file instead of the handrolled
	  uniquifying process that was broken to begin with.
	  Do not use a potentially non-existing or non-writable directory
	  for saving dumps.
	  Privatize private variables.

2009-05-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/monitor/nagios/stream.py:
	  Clean up based on pychecker's findings.
	  This fixes an actual bug in the temporary file creation,
	  and removes chunks of either half-implemented code or
	  changed-but-not-cleaned-up code.

2009-05-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/random/styleguide:
	  Add a note on pychecker use.

2009-05-22  Thomas Vander Stichele  <thomas at apestaart dot org>
